...

    case 'success': {
      return artist && artistTopOffers && artistTopOffers.length > 0 ? (
        <FlatList
          data={artistTopOffers}
          keyExtractor={keyExtractor}
          ListHeaderComponent={<StyledTitle3>Ses oeuvres populaires</StyledTitle3>}
          ItemSeparatorComponent={StyledSeparator}
          contentContainerStyle={contentContainerStyle}
          scrollEnabled={false}
          renderItem={({ item }) => renderItem({ item, artistName: artist.name })}
        />
      ) : null
...
