...
      return <OfferPlaylistSkeleton size={TileSize.LARGE} numberOfTiles={4} />

    case 'success': {
      return playlistOffers?.length ? (
        <PassPlaylist
          playlistType={PlaylistType.SAME_ARTIST_PLAYLIST}
          title="Toutes ses offres disponibles"
          data={playlistOffers}
          FlatListComponent={FlatList}
          renderItem={OfferPlaylistItem({
            categoryMapping,
            labelMapping,
            currency,
...
