...
      navigate('IdentityCheckCity')
    }
  }

  return (
    <PageWithHeader
      title={t`Profil`}
      scrollChildren={
        <ModalContent>
          <CenteredTitle title={t`Comment t'appelles-tu ?`} />
          <TextInput
            label={t`Prénom`}
            value={firstName}
...
