...
      shouldLimitWidth
      shouldDisplayBackButton
      title="Inscription"
      scrollChildren={
        <React.Fragment>
          <TitleContainer>
            <Typo.Title3 {...setTextSemantic('h2')}>Crée-toi un compte</Typo.Title3>
          </TitleContainer>
          <SeparatorWithText label="Méthode recommandée" icon={StepperValidate} color="primary" />
          <StyledViewGap gap={4}>
            <SSOButtonGoogle type="signup" onSignInFailure={onSSOSignUpFailure} />
            {enableAppleSSO ? (
              <SSOButtonApple type="signup" onSignInFailure={onSSOSignUpFailure} />
...
            <SeparatorWithText label="ou" />
            <InternalTouchableLink
              as={Button}
              variant="secondary"
              color="neutral"
              icon={EmailFilled}
              wording="S’inscrire avec mon e-mail"
              navigateTo={{ screen: 'SignupForm', params }}
            />
          </StyledViewGap>
        </React.Fragment>
      }
      fixedBottomChildren={<SignUpButton type="login" onAdditionalPress={onLogLoginAnalytics} />}
...
