...
export const ResetPasswordEmailSent: FunctionComponent<Props> = ({ route }) => {
  const { goBack } = useGoBack('Login', undefined)
  return (
    <BottomContentPage>
      <ModalHeader
        title="E-mail de réinitialisation de mot de passe envoyé&nbsp;!"
        leftIconAccessibilityLabel="Revenir en arrière"
        leftIcon={ArrowPrevious}
        onLeftIconPress={goBack}
        rightIconAccessibilityLabel="Revenir à l’accueil"
        rightIcon={Close}
        onRightIconPress={navigateToHome}
      />
...
