...
  }, [])

  const disabled = watch('email').trim() === ''

  return (
    <Form.MaxWidth>
      <Typo.Title3 {...setTextSemantic('h2')}>Crée-toi un compte</Typo.Title3>
      <ControllersContainer gap={5}>
        <EmailInputController
          label="Adresse e-mail"
          control={control}
          name="email"
          onSpellingHelpPress={onLogHasCorrectedEmail}
...
