...
          wording="Créer une liste de favoris"
          icon={PlusLight}
          onPress={onCreateFavListPress}
        />
        <Spacer.Column numberOfSpaces={4} />
        <ButtonTertiaryBlack
          wording="Non merci"
          onPress={onHideModalPress}
          icon={Invalidate}
          accessibilityLabel="Fermer la modale"
        />
      </AppModalWithIllustration>
    </React.Fragment>
...
