appId: ${MAESTRO_APP_ID}
tags:
  - auth
onFlowStart:
  - runScript: ../common/deeplinks/DeepLink.js
  - runScript:
      file: ../common/helpers/generateUser.js
      env:
        id_provider: 'UBBLE'
        step: 'BENEFICIARY'
        age: 18
---
- runFlow: ../common/lifecycle/LaunchApp.yml
- runFlow: ../common/lifecycle/StopApp.yml
- runFlow: ../common/deeplinks/DeeplinkGeneratedAccount.yml
- runFlow: ../common/navigation/GoToProfileFromTabBar.yml

- assertVisible: 'Profil'
- scrollUntilVisible:
    element:
      text: 'République Française - Liberté Égalité Fraternité'
- tapOn: 'Déconnexion'

- assertVisible: 'Créer un compte'
