appId: ${MAESTRO_APP_ID}
---
- tapOn: 'Se connecter'
- tapOn: 'Continuer avec mon e-mail'
- assertVisible: 'Connecte-toi'

- runFlow:
    when:
      platform: Android
    commands:
      - pressKey: back

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: 'Revenir en arrière'

- runFlow:
    when:
      platform: Web
    commands:
      - tapOn:
          id: 'Revenir en arrière'

- tapOn: 'Créer un compte'
- tapOn: 'S’inscrire avec mon e-mail'

- assertVisible: 'Crée-toi un compte'
- runFlow:
    when:
      platform: Android
    commands:
      - pressKey: back

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: 'Revenir en arrière'

- runFlow:
    when:
      platform: Web
    commands:
      - tapOn:
          id: 'Revenir en arrière'

- waitForAnimationToEnd
