appId: ${MAESTRO_APP_ID}
---
- tapOn: 'Se connecter'
- assertVisible: 'Connecte-toi'
- pressKey: back

- tapOn: 'Créer un compte'
- assertVisible: 'Crée-toi un compte'
- pressKey: back
