appId: app.passculture.staging
---
# Launch App
- runFlow: reusableFlows/LaunchApp.yml
# First Launch
- runFlow: reusableFlows/FirstLaunch.yml
- tapOn:
      id: "Mon profil"
- tapOn: "Se connecter"
- assertVisible: "Connecte-toi"
- tapOn:
        id: "Entrée pour l’email"
- inputText: ${USERNAME}
- tapOn:
        id: "Mot de passe"
- inputText: ${PASSWORD}

- tapOn: "Se connecter"
#pour sortir de la saisie
- tapOn:
    id: "Se connecter"

- tapOn: "Plus tard"
- tapOn:
    id: "Mon profil"

- tapOn: "Informations personnelles"
- assertVisible:
    text: "Supprimer mon compte"
    index: 1

- tapOn:
    id: "Supprimer mon compte"

# AccountDeletionConfirmationPage
- runFlow: reusableFlows/AccountDeletionConfirmationPage.yml


# Stop App
#- runFlow: reusableFlows/StopApp.yml