appId: app.passculture.staging
---
- tapOn: "Se connecter"
- assertVisible: "Connecte-toi"
- tapOn:
        id: "Entrée pour l’email"
- inputText: ${USERNAME}
- tapOn:
        id: "Mot de passe"
- inputText: ${PASSWORD}