appId: ${MAESTRO_APP_ID}
---
- assertVisible: 'Mon profil'
- tapOn: 'Se connecter'
- tapOn: 'Continuer avec mon e-mail'

- assertVisible: 'Connecte-toi'
- tapOn:
    id: 'Entrée pour l’email'
- runFlow: InputEmail.yml
- tapOn:
    id: 'Mot de passe'
- inputText: ${MAESTRO_PASSWORD}
- hideKeyboard
- tapOn: 'Se connecter' # Android

- tapOn: 'Réactiver mon compte'
- tapOn: 'Découvrir le catalogue'
