appId: ${MAESTRO_APP_ID}
---
- assertVisible: 'Mon profil'
- tapOn: 'Se connecter'
- tapOn: 'Continuer avec mon e-mail'

- assertVisible: 'Connecte-toi'
- tapOn:
    id: 'Entrée pour l’email'
- inputText: ${MAESTRO_UNREGISTERED_EMAIL}
- tapOn:
    id: 'Mot de passe'
- inputText: ${MAESTRO_PASSWORD}
- runFlow:
    when:
      platform: Android
    commands:
      - hideKeyboard

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: 'Connecte-toi' # Pour fermer le clavier iOS
- tapOn: 'Se connecter' # Android

- runFlow:
    when:
      visible: 'Prends 1 minute'
    commands:
      - tapOn: 'Plus tard'
