appId: ${MAESTRO_APP_ID}
---
- assertVisible: 'Mon profil'
- tapOn: 'Se connecter'
- tapOn: 'Continuer avec mon e-mail'

- assertVisible: 'Connecte-toi'
- tapOn:
    id: 'Entrée pour l’email'
- evalScript: '${console.log(output.userEmail)}'
- inputText: ${output.userEmail}
- tapOn:
    id: 'Mot de passe'
- inputText: ${MAESTRO_PASSWORD}
- runFlow:
    when:
      platform: Android
    commands:
      - hideKeyboard
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: 'Connecte-toi' # Pour fermer le clavier iOS

- tapOn:
    text: 'Se connecter' # Android
    retryTapIfNoChange: true

- waitForAnimationToEnd

- runFlow: # Si apparition de l'écran de crédit (félicitations 18 ans)
    when:
      visible: '.*Bonne nouvelle.*'
    commands:
      - tapOn: '.*Continuer.*'

- runFlow: # Si apparition de la modale de suivi des thèmes
    when:
      visible: 'Non merci'
    commands:
      - tapOn: 'Non merci'

- runFlow: # Si apparition du QPI
    when:
      visible: 'Prends 1 minute'
    commands:
      - tapOn: 'Plus tard'

- waitForAnimationToEnd

- runFlow: # Si apparition de la modale de partage
    when:
      visible: 'Partager l’appli'
    commands:
      - tapOn: 'Non merci'

- runFlow: # Si apparition de la modale native iOS de sauvegarde du mot de passe
    when:
      visible: 'Plus tard'
    commands:
      - tapOn: 'Plus tard'
