appId: ${MAESTRO_APP_ID}
---
- tapOn:
    text: "Informations personnelles"
    index: 1

- assertVisible: "Prénom et nom"
- assertVisible: "Adresse e-mail"
- assertVisible: "Numéro de téléphone"
- assertVisible: "Mot de passe"
- tapOn:
    text: "Supprimer mon compte"
    index: 1

- assertVisible: "Veux-tu vraiment supprimer ton compte\_?"
- tapOn: "Supprimer mon compte"

- assertVisible: "Ton compte a été désactivé"
- assertVisible: "Tu as 60 jours pour changer d’avis. Tu pourras facilement réactiver\
    \ ton compte en te connectant."
- tapOn: "Retourner à l’accueil"
